Reorganize documentation into service-specific container folders
- Move DATA-SCHEMA.md to containers/server-site/DATA-SCHEMA.md
- Create containers/minecraft/DATA.md for minecraft container data usage
- Move MIGRATION.md to containers/server-site/MIGRATION.md
- Update server-site README to reference new documentation location
- Clean up root-level documentation files

--- a/containers/minecraft/Dockerfile
+++ b/containers/minecraft/Dockerfile
@@ -7,7 +7,10 @@ FROM minecraft-forge-base:1.20.1-47.4.0
 # Copy configuration files
 COPY containers/minecraft/eula.txt /minecraft/
 COPY containers/minecraft/server.properties /minecraft/server.properties
-
+# Delete the old config folder
+RUN rm -rf /minecraft/config
+# Copy the config folder to replace the old config folder
+COPY containers/minecraft/config /minecraft/config
 # Copy and extract mods
 COPY containers/minecraft/mods.zip /minecraft/mods.zip
 RUN unzip -q /minecraft/mods.zip -d /minecraft/mods && \
