Remove Git LFS and move large files to parent folder
- Removed Git LFS tracking
- Moved large files (mods.zip, forge installer, zip archives) to parent folder
- Updated Dockerfile to remove mods.zip extraction (mods already in base image)
- Updated build.sh to copy forge installer from parent folder when needed
- Updated .gitignore to ignore large files

--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,10 @@
 minecraft/
 !data/.gitkeep
 
-# Track mods.zip but ignore extracted mod JARs
-containers/minecraft/mods/*.jar
-!containers/minecraft/mods.zip
+# Large files moved to parent folder - ignore them
+*.zip
+containers/*.zip
+containers/forge-*.jar
 
 # Ruby/Rails
 containers/server-site/vendor/
