--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,1 @@
-# Only track specific large files with LFS
-containers/minecraft/forge-*.jar filter=lfs diff=lfs merge=lfs -text
-containers/minecraft/mods.zip filter=lfs diff=lfs merge=lfs -text
-containers/mods.zip filter=lfs diff=lfs merge=lfs -text
-containers/forge-*.jar filter=lfs diff=lfs merge=lfs -text
-*.zip filter=lfs diff=lfs merge=lfs -text
+# No Git LFS needed - large files moved to parent folder
