Remove large minecraft files from git tracking
- Updated .gitignore to ignore entire minecraft folder (except server.properties and eula.txt)
- Removed all minecraft files from git tracking
- This will reduce git repository size significantly

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
-# Minecraft server files
+# Minecraft server files - ignore everything in minecraft folder
 minecraft/
-!data/.gitkeep
+!minecraft/server.properties
+!minecraft/eula.txt
 
 # Large files moved to parent folder - ignore them
 *.zip
