--- a/containers/server-site/nginx.conf
+++ b/containers/server-site/nginx.conf
@@ -4,6 +4,9 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
+    # Resolver for dynamic hostname resolution (needed for host.docker.internal)
+    resolver 127.0.0.11 valid=30s;
+
     # Increase buffer sizes to handle large headers/cookies
     client_header_buffer_size 4k;
     large_client_header_buffers 4 16k;
@@ -26,8 +29,11 @@ server {
     }
 
     # Proxy to ttyd terminal (with WebSocket support)
+    # minecraft-server uses network_mode: host, so access via host.docker.internal
+    # Use variable in proxy_pass to enable runtime DNS resolution
     location /server-terminal {
-        proxy_pass http://minecraft-server:7681/;
+        set $backend "http://host.docker.internal:7681";
+        proxy_pass $backend;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
