--- a/containers/server-site/nginx.conf
+++ b/containers/server-site/nginx.conf
@@ -29,10 +29,9 @@ server {
     }
 
     # Proxy to ttyd terminal (with WebSocket support)
-    # minecraft-server uses network_mode: host, so access via host.docker.internal
     # Use variable in proxy_pass to enable runtime DNS resolution
     location /server-terminal {
-        set $backend "http://host.docker.internal:7681";
+        set $backend "http://minecraft-server:7681";
         proxy_pass $backend;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
