Fix server-terminal redirect and ttyd binding to all interfaces

--- a/containers/server-site/nginx.conf
+++ b/containers/server-site/nginx.conf
@@ -28,22 +28,9 @@ server {
         return 302 /mods.zip;
     }
 
-    # Proxy to ttyd terminal (with WebSocket support)
-    # Use variable in proxy_pass to enable runtime DNS resolution
+    # Redirect to ttyd terminal on localhost:7681
     location /server-terminal {
-        set $backend "http://minecraft-server:7681";
-        proxy_pass $backend;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_read_timeout 86400;
-
-        # Custom error page when terminal is unreachable
-        error_page 502 503 504 /terminal-error.html;
+        return 302 http://localhost:7681;
     }
 
     # Serve custom terminal error page
